# ID-VISUAL-AX

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DIAGNOSTICO_ESP32.md  DOCKER_README.md  INSTRUCOES_MQTT_BROKER.md  PROBLEMA_RESOLVIDO.md  README.md  changed_files.txt  diag_readable.txt  diff_stat.txt  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.override.yml.disabled  docker-compose.prod.yml  docker-compose.yml  final_git_status.txt  mos_data_check.json  package.json  verify_badge_backend.py  verify_imports.py
backend/: .dockerignore  .env.example  Dockerfile  ERROR.txt  README.md  alembic.ini  alembic_log.txt  backend.db  check_api_wc27.py  check_api_wc27_urllib.py  check_live_data.py  check_mo_schema.py  check_uuid_types.py  check_wo_states_existence.py  debug_error.txt  debug_odoo_docs.txt  debug_output.txt  debug_wo_output.txt  diag_output_v2.txt  diag_readable_v2.txt  diag_utf8.txt  diagnose_odoo.py  docker-compose.yml  fields_output.txt  final_reader.py  fix_db_columns.py  fix_schema.py  fix_schema_transfer.py  fix_user_config.py  hr_employee_fields.txt  inspect_db.py  inspect_odoo_docs.py  integration_output.txt  kill_port_8000.ps1  list_routes.py  list_wo_states.py  mrp_workorder_fields.txt  odoo_activity_types.txt  odoo_search_output.txt  pyproject.toml  (+19 more)
backend/alembic/: env.py
backend/app/: init_db_sync.py  initial_data.py  main.py
backend/scripts/: backfill_mpr_timestamps.py  clear_manual_requests.py  debug_config.py  migrate_active_database.py  seed_active_batch.py  seed_bi.py  seed_printer_settings.py  seed_sync.py  (+5 more)
(+414 files in other folders)
